Fixed alignment of image

--- a/src/App.css
+++ b/src/App.css
@@ -47,14 +47,11 @@
   justify-content: center;
   align-items: center;
 }
-.image div {
-  display: table;
-  vertical-align: middle;
-  width: 100%;
-  height: 100%;
-}
 
 .image div svg{
+  display: block;
+  width: 100%;
+  height: 100%;
   max-width: 400px;
   max-height: 400px;
 }
@@ -67,6 +64,7 @@
 }
 .sound audio {
   display: block;
+  width: 100%;
 }
 .sound {
   grid-area: sound;
